# AI-Oracle

./: .env.example  .gitignore  =0.5  README.md  pyproject.toml
app/: config.py  main.py
app/db/: database.py  orm_models.py  profile_orm.py
app/ingestion/: router.py  service.py  validators.py
app/ingestion/parsers/: base.py  structured_parser.py  text_parser.py
app/llm/: client.py  ollama_client.py  openai_client.py  prompts.py
app/memory/: embedder.py  episodic.py  retriever.py  router.py  semantic.py  temporal.py  vector_store.py
app/models/: event.py  ingestion.py  memory.py  profile.py  simulation.py
app/profile/: builder.py  calculator.py  repository.py  router.py  state.py
app/simulation/: actions.py  engine.py  router.py  transition.py
app/storage/: event_repository.py  router.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DomainRadarChart.tsx  EventTimeline.tsx  ScenarioComparison.tsx  SimulationForm.tsx
frontend/src/lib/: api.ts  types.ts
tests/: conftest.py  test_api.py  test_event_repository.py  test_ingestion_service.py  test_memory_api.py  test_memory_embedder.py  test_memory_episodic.py  test_memory_retriever.py  test_memory_semantic.py  test_memory_temporal.py  test_memory_vector_store.py  test_models.py  test_profile_api.py  test_profile_builder.py  test_profile_calculator.py  test_profile_repository.py  test_simulation.py  test_structured_parser.py  test_text_parser.py  test_validators.py
